--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@tailwindcss/typography": "^0.5.19",
     "astro": "^5.3.0",
     "astro-expressive-code": "^0.41.6",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "satori": "^0.19.2",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vanilla-tilt": "^1.8.1"
   }
 }
