--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
   "dependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "astro": "^5.3.0",
     "astro-expressive-code": "^0.41.6",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "mdast-util-to-string": "^4.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "reading-time": "^1.5.0",
     "satori": "^0.19.2",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
+    "three": "^0.182.0",
     "typescript": "^5.9.3",
     "vanilla-tilt": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/three": "^0.182.0"
   }
 }
