--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@codemirror/legacy-modes": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@nanostores/react": "^1.0.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
@@ -22,6 +24,8 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.3.0",
     "astro-expressive-code": "^0.41.6",
+    "codemirror": "^6.0.2",
+    "dockerfile-ast": "^0.7.1",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "mdast-util-to-string": "^4.0.0",
